# x_media_ci

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  requirements-dev.txt
.github/: pull_request_template.md
tools/: .env.example  Makefile  README.md  citeseal.py  fetch_tweet.py  fetch_x.py  make.cmd  pyproject.toml  requirements.txt  x_media_ci.py
tools/.github/workflows/: release.yml
tools/android/: README.md  adb_sync.cmd  adb_sync.sh  serve.cmd  serve.sh
tools/app/: BUILDING.md  README.md  pubspec.yaml
tools/app/lib/: main.dart
tools/app/lib/api/: ci_api.dart
tools/app/lib/screens/: browse_screen.dart  edit_screen.dart  local_screen.dart  remote_screen.dart  settings_screen.dart
tools/app_desktop/: README.md  tweet_fetcher.py  tweet_gui.py  tweet_gui.spec
tools/examples/: README.md  example_config.json  run_one_tweet_pipeline.sh  run_pyflakes.sh  run_validate.sh
tools/examples/agent/: README.md  claude_prompt_example.md  hermes_workflow.md  http_client_example.py
tools/scripts/: __init__.py  build_agent_bundle.py  build_manifest.py  ci_common.py  demo_agent_consumption.py  gen_article_md.py  make_article_pdf.py  make_ocr_extract.py  ocr_long_image.py  ocr_screens_to_text.py  sample_archive.py  transcode_to_mp4.py  tweet_fix.py  tweet_schema.py  tweet_validate.py  write_ocr_exports.py
tools/server/: README.md  _frozen_entry.py  app.py  build_linux.sh  citeseal_server.spec  run_server.cmd  run_server.sh  smoke_test_server.py  start.cmd  verify_linux_tarball.py  x_media_ci_server.spec
(+45 files in other folders)
