[project]
name = "citeseal"
version = "0.7.0"
description = "Local-first, auditable, agent-ready social media research archive CLI."
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "Pillow>=10.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
ocr = [
    # Only needed for the ocr / ocr-long / ocr-md sub-commands.
    # tesseract itself is a system binary, not a PyPI package.
]
dev = [
    "pyflakes>=3.0",
]

[project.scripts]
# Lets users do:  citeseal md --tweet-dir ...
citeseal = "citeseal.cli:main"

[tool.pyflakes]
exclude = ["build", "dist"]
